--- a/back-end/package.json
+++ b/back-end/package.json
@@ -29,6 +29,7 @@
     "ollama": "^0.5.12",
     "openai": "^4.81.0",
     "path": "^0.12.7",
+    "puppeteer": "^24.1.1",
     "sanitize-html": "^2.14.0",
     "serpapi": "^2.1.0",
     "winston": "^3.17.0"
