--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,10 +22,12 @@
     "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.1.5",
+    "shadcn-ui": "^0.9.4",
     "styled-jsx": "^5.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@shadcn/ui": "^0.0.4",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
