--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
     "cookie-parser": "^1.4.7",
+    "firebase": "^11.2.0",
     "framer-motion": "^12.0.6",
     "leaflet": "^1.9.4",
     "lucide": "^0.474.0",
